# shipsim

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: API.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  styles.css
frontend/src/components/: AlertPanel.vue  ControlPanel.vue  RouteMap.vue  SensorPanel.vue  SpeedChart.vue  StatusCard.vue  TelemetryGrid.vue
scenarios/: normal.json  storm.json  world_fleet.json
shipsim/: __init__.py  api.py  broadcaster.py  cli.py  engine.py  fleet.py  models.py  runtime.py  scenario.py  sensors.py
shipsim/web/: index-C0YmqLAt.js  index-CeCgXj7s.css  index.html
