[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipsim"
version = "0.1.0"
description = "CLI and API driven ship telemetry simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "typer>=0.12.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.scripts]
shipsim = "shipsim.cli:app"

[tool.setuptools.packages.find]
include = ["shipsim*"]

[tool.setuptools.package-data]
shipsim = ["web/*"]
